Add default layout; use CDNs for vendor assets
It is preferable to use CDNs or external sources in general for vendor assets.
Phoenix.js is part of the framework but as it's not bundled with it, it is
better to use a CDN than keeping the code with our custom code. This way it's
easier to maintain the whole app and make updates when required. The file
shouldn't be in our Git history at all.

--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -4,28 +4,31 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Hello Phoenix!</title>
+    <meta name="description" content="Online chess">
+    <meta name="author" content="Haukur Páll Hallvarðsson">
+    <title>Xadrez</title>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/sandstone/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//cdn.rawgit.com/oakmac/chessboardjs/master/releases/0.3.0/css/chessboard-0.3.0.min.css">
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
-
   <body>
-    <div class="container" role="main">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
-        </ul>
-        <span class="logo"></span>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">Xadrez</a>
+        </div>
       </div>
-
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
-
+    </nav>
+    <div id="content" class="container">
       <%= @inner %>
-
-    </div> <!-- /container -->
+    </div>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
+    <script src="//cdn.rawgit.com/oakmac/chessboardjs/master/releases/0.3.0/js/chessboard-0.3.0.min.js"></script>
+    <script src="//cdn.rawgit.com/jhlywa/chess.js/cd9448f3d21124c39ed197e577df1d22b197f541/chess.min.js"></script>
+    <script src="//cdn.rawgit.com/phoenixframework/phoenix/6da5a66a11ff02e5629e3512649413afe9257bc7/priv/static/phoenix.js"></script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
     <script>require("web/static/js/app")</script>
   </body>
