--- a/web/static/css/app.scss
+++ b/web/static/css/app.scss
@@ -5,3 +5,14 @@ body {
 #content {
   padding-top: 20px;
 }
+
+#board, #info {
+  max-width: 500px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#info {
+  padding-top: 20px;
+}
